# poc-algorithm-category-dialog

./: .gitignore  Dockerfile  main.py  pyproject.toml  questions.json
manifest/: deployment.yaml  ingress.yaml  service.yaml
script/: build
templates/: card.html  embedded.html  index.html  question.html
