[tool.poetry]
name = "dialog"
version = "0.1.0"
description = ""
authors = ["Anne Schuth <anne.schuth@rijksoverheid.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
pytest-playwright = "^0.4.4"
Jinja2 = "^3.1.3"
granian = "^1.2.3"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
